# json-position-mapper

./: Readme.md  example.json  example.py  pyproject.toml
.github/workflows/: checks.yml  release.yml  test.yml
json_mapper/: mapper.py
tests/: complex_types.json  mapper_test.py  sample_1.json
