[tool.poetry]
name = "json-mapper"
version = "0.1.0"
description = "Map file-based JSON inputs from the file keys to their locations in the original file"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"
packages = [
    { include = "json_mapper" },
]

[tool.poetry.dependencies]
python = "^3.9"
json-stream = "^1.3.0"

[tool.poetry.dev-dependencies]
rope = "^1.1.1"
mypy = "^0.961"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
